--- a/vue/package.json
+++ b/vue/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules && npm run indexcopy",
+    "indexcopy": "copyfiles index.html dist"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
@@ -19,6 +20,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.6.1",
+    "copyfiles": "^2.0.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
